--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
- <script src="/index.bundle.js"></script> 
- <link type="text/css" href="/main.css">
+ <link type="text/css" href="#">
 </body>
 </html>
