--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
- <link type="text/css" href="#">
+ <script src="/index.bundle.js"></script> 
+ <link type="text/css" href="/main.css">
 </body>
 </html>
